@@ -7,6 +7,8 @@ scalaVersion := "2.12.7"
 scalacOptions += "-Ypartial-unification"
 //scalacOptions += "-Xdisable-assertions"
 
+javacOptions += "--illegal-access=warn"
+
 libraryDependencies += "org.scalactic" %% "scalactic" % "3.0.5"
 libraryDependencies += "org.scalatest" %% "scalatest" % "3.0.5" % "test"
 libraryDependencies += "com.typesafe" % "config" % "1.3.2"
